--- a/build.gradle
+++ b/build.gradle
@@ -36,4 +36,18 @@ dependencies {
 
     // Testing
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    //QueryDsl
+    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
+    annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
+    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+}
+
+tasks.withType(Copy) {
+    setDuplicatesStrategy(DuplicatesStrategy.EXCLUDE)
+}
+
+tasks.withType(Jar) {
+    setDuplicatesStrategy(DuplicatesStrategy.EXCLUDE)
 }
