feat: 로그인/아웃 기능 구현 및 회원가입, 로그인/아웃 단위 테스트 추가
- 로그인 및 로그아웃 기능 구현
- 회원가입과 로그인/아웃에 대한 단위 테스트 코드 작성 및 테스트 수행
- 이후 회원가입부터 로그인/아웃까지의 통합 테스트 코드 작성 예정

--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,9 @@ dependencies {
 
     // Testing
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.springframework.security:spring-security-test'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
 
     //QueryDsl
     implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
@@ -50,4 +53,8 @@ tasks.withType(Copy) {
 
 tasks.withType(Jar) {
     setDuplicatesStrategy(DuplicatesStrategy.EXCLUDE)
+}
+
+tasks.named('test') {
+    useJUnitPlatform()
 }
