refactor: 패키지 의존성 사이클 문제 해결 및 도메인 구조 개선 (board <-> user, board <-> social)
- 인텔리제이 코드 분석에서 감지된 패키지 의존성 순환 문제 해결
- board 패키지의 DTO 및 Entity와 user 패키지의 DTO, Entity 간 의존성 개선
- board ↔ social 패키지 의존성 사이클 해결을 위해 Comment, Like 관련 엔티티 및 Repository, Service를 board 패키지로 이동
- 댓글(Comment) 및 좋아요(Like) 기능이 게시물(Board)과 도메인적으로 밀접한 관계이므로 패키지 이동을 통해 구조 개선
- 패키지 구조 정리 및 의존성 분리로 코드 유지보수성 향상

--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
 
     // Testing
+    testImplementation 'com.tngtech.archunit:archunit:1.1.0'  // 패키지 의존성 검증 위한 ArchUnit 의존성
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
