--- a/buildspec-prod.yml
+++ b/buildspec-prod.yml
@@ -38,7 +38,7 @@ phases:
       - echo "Build Phase start..."
       - docker build -t lindo-backend:latest .
       - echo "Retag docker image"
-      - docker tag lindo-backend:latest ${060795912936.dkr.ecr.ap-northeast-2.amazonaws.com/lindo/backend}:${IMAGE_TAG}
+      - docker tag lindo-backend:latest $ECR_REPO_URL:$IMAGE_TAG
       # debug
       - docker images
   post_build:
