브랜치 추가
# Conflicts:
#	.gitignore
#	src/main/java/team/lindo/backend/application/product/dto/ProductRequestDto.java
#	src/main/java/team/lindo/backend/application/product/entity/Category.java
#	src/main/java/team/lindo/backend/application/product/entity/Product.java
#	src/main/java/team/lindo/backend/application/product/service/ProductService.java

--- a/.gitignore
+++ b/.gitignore
@@ -39,5 +39,6 @@ out/
 # yml files
 application-*.yml
 
-# .gitignore
-src/main/resources/db/.envsrc/main/resources/db/.env
+
+# .env
+src/main/resources/db/.env
