--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,17 @@ dependencies {
     annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 }
 
+def querydslDir = "build/generated/querydsl"
+
+sourceSets {
+    main {
+        java {
+            srcDirs += [querydslDir]
+        }
+    }
+}
+
+
 tasks.withType(Copy) {
     setDuplicatesStrategy(DuplicatesStrategy.EXCLUDE)
 }
