--- a/src/main/resources/db/.env
+++ b/src/main/resources/db/.env
@@ -6,5 +6,5 @@ NAVER_CLIENT_SECRET="agatoAz3ob"
 DB_HOST="localhost"
 DB_PORT="3306"
 DB_USER="root"
-DB_PASSWORD="1234qwer!"
-DB_NAME="ms_lindo"
+DB_PASSWORD="asdzxc135."
+DB_NAME="jw_lindogu
