--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,10 @@ dependencies {
     // MySQL JDBC Driver
     implementation 'mysql:mysql-connector-java:8.0.33'
 
+    //S3
+    implementation 'software.amazon.awssdk:s3:2.25.15'
+    implementation 'javax.annotation:javax.annotation-api:1.3.2'
+
     // JPA
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-security'
